--- a/brand_teacher/css/style.css
+++ b/brand_teacher/css/style.css
@@ -640,12 +640,17 @@ h4 {
 .form-connect .form .btn {
   border: 1px solid #9747FF;
 }
+.form-connect .form .approval__form,
+.form-connect .form .submit {
+  position: relative;
+  z-index: 1500;
+  user-select: none;
+}
 .form-connect .circles {
   position: absolute;
   top: -30%;
   width: 100%;
   height: 100%;
-  opacity: 0.7;
 }
 .form-connect .circles li {
   position: absolute;
@@ -657,70 +662,70 @@ h4 {
   border-radius: 100%;
 }
 .form-connect .circles li:nth-child(1) {
-  transform: translateX(0);
+  transform: translate3d(0, 0, 0);
   animation: animate_first 5s ease-in-out infinite;
-  animation-fill-mode: forwards;
 }
 .form-connect .circles li:nth-child(2) {
-  transform: translateX(33%);
+  transform: translate3d(33%, 0, 10em) scale(0.5, 0.5);
   animation: animate_second 5s ease-in-out infinite;
-  animation-fill-mode: forwards;
 }
 .form-connect .circles li:nth-child(3) {
-  transform: translateX(66%);
+  transform: translate3d(66%, 0, 0);
   animation: animate_third 5s ease-in-out infinite;
-  animation-fill-mode: forwards;
 }
 @keyframes animate_first {
   0% {
-    transform: translateX(0);
+    transform: translate3d(0, 0, 0);
   }
   25% {
-    transform: translateX(66%);
+    transform: translate3d(66%, 0, 0);
   }
   50% {
-    transform: translateX(33%);
+    transform: translate3d(33%, 0, 10em) scale(0.5, 0.5);
   }
   75% {
-    transform: translateX(66%);
+    transform: translate3d(66%, 0, 0);
   }
   100% {
-    transform: translateX(0);
+    transform: translate3d(0, 0, 0);
   }
 }
 @keyframes animate_second {
   0% {
-    transform: translateX(33%);
+    transform: translate3d(33%, 0, 10em) scale(0.5, 0.5);
   }
   25% {
-    transform: translateX(0);
+    transform: translate3d(0, 0, 0);
   }
   50% {
-    transform: translateX(66%);
+    transform: translate3d(66%, 0, 0);
   }
   75% {
-    transform: translateX(0);
+    transform: translate3d(0, 0, 0);
   }
   100% {
-    transform: translateX(33%);
+    transform: translate3d(33%, 0, 10em) scale(0.5, 0.5);
   }
 }
 @keyframes animate_third {
   0% {
-    transform: translateX(66%);
+    transform: translate3d(66%, 0, 0);
   }
   25% {
-    transform: translateX(33%);
+    transform: translate3d(33%, 0, 10em) scale(0.5, 0.5);
   }
   50% {
-    transform: translateX(0);
+    transform: translate3d(0, 0, 0);
   }
   75% {
-    transform: translateX(33%);
+    transform: translate3d(33%, 0, 10em) scale(0.5, 0.5);
   }
   100% {
-    transform: translateX(66%);
+    transform: translate3d(66%, 0, 0);
   }
+}
+.form-connect form {
+  position: relative;
 }
 /* contacts */
 .contacts {
