--- a/brand_teacher/less/style.less
+++ b/brand_teacher/less/style.less
@@ -675,6 +675,11 @@ ul, ol, p, figure, h1, h2, h3, h4 {
         .btn:disabled, .btn {
             border: 1px solid @btn-color;
         }
+        .approval__form, .submit {
+            position: relative;
+            z-index: 1500;
+            user-select: none;
+        }
     }
 
     // animation
@@ -683,7 +688,6 @@ ul, ol, p, figure, h1, h2, h3, h4 {
         top: -30%;
         width: 100%;
         height: 100%;
-        opacity: 0.7;
     }
     
     .circles li{
@@ -697,74 +701,75 @@ ul, ol, p, figure, h1, h2, h3, h4 {
     }
     
     .circles li:nth-child(1){
-        transform: translateX(0);
+        transform: translate3d(0, 0, 0);
         animation: animate_first 5s ease-in-out infinite;
-            animation-fill-mode: forwards;
     }
     
     
     .circles li:nth-child(2){
-        transform: translateX(33%);
+        transform: translate3d(33%, 0, 10em) scale(0.5, 0.5);
         animation: animate_second 5s ease-in-out infinite;
-            animation-fill-mode: forwards;
     }
     
     .circles li:nth-child(3){
-        transform: translateX(66%);
+        transform: translate3d(66%, 0, 0);
         animation: animate_third 5s ease-in-out infinite;
-            animation-fill-mode: forwards;
     }
     
     @keyframes animate_first {
         0% {
-            transform: translateX(0);
+            transform: translate3d(0, 0, 0);
         }
         25% {
-            transform: translateX(66%);
+            transform: translate3d(66%, 0, 0);
         }
         50% {
-            transform: translateX(33%);
+            transform: translate3d(33%, 0, 10em) scale(0.5, 0.5);
         }
         75% {
-            transform: translateX(66%);
+            transform: translate3d(66%, 0, 0);
         }
         100% {
-            transform: translateX(0);
+            transform: translate3d(0, 0, 0);
         }
     }
     @keyframes animate_second {
         0% {
-            transform: translateX(33%);
+            transform: translate3d(33%, 0, 10em) scale(0.5, 0.5);
         }
         25% {
-            transform: translateX(0);
+            transform: translate3d(0, 0, 0);
         }
         50% {
-            transform: translateX(66%);
+            transform: translate3d(66%, 0, 0);
         }
         75% {
-            transform: translateX(0);
+            transform: translate3d(0, 0, 0)
         }
         100% {
-            transform: translateX(33%);
+            transform: translate3d(33%, 0, 10em) scale(0.5, 0.5);
         }
     }
     @keyframes animate_third {
         0% {
-            transform: translateX(66%);
+            transform: translate3d(66%, 0, 0);
         }
         25% {
-            transform: translateX(33%);
+            transform: translate3d(33%, 0, 10em) scale(0.5, 0.5);
         }
         50% {
-            transform: translateX(0);
+            transform: translate3d(0, 0, 0);
         }
         75% {
-            transform: translateX(33%);
+            transform: translate3d(33%, 0, 10em) scale(0.5, 0.5);
         }
         100% {
-            transform: translateX(66%);
+            transform: translate3d(66%, 0, 0);
         }
+    }
+
+    form {
+        position: relative;
     }
 }
 
