--- a/brand_teacher/css/style.css
+++ b/brand_teacher/css/style.css
@@ -38,7 +38,8 @@ main {
   top: 100vh;
 }
 h2,
-h3 {
+h3,
+h4 {
   font-family: "Ledger", sans-serif;
   font-weight: 400;
   font-size: 24px;
@@ -419,6 +420,7 @@ h4 {
   font-family: "Ledger", sans-serif;
   font-size: 14px;
   letter-spacing: 0.03em;
+  line-height: 1.2;
   text-transform: uppercase;
   color: #fff;
   text-align: center;
@@ -475,6 +477,52 @@ h4 {
 .faq {
   background-color: #232323;
   padding: 85px 0;
+  color: #fff;
+}
+.faq__accordion {
+  margin-top: 50px;
+}
+.faq__accordion-box {
+  border-top: 1px solid #616161;
+}
+.faq__accordion-box:last-child {
+  border-bottom: 1px solid #616161;
+}
+.faq__accordion-titlebox {
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  padding: 25px 0;
+}
+.faq__accordion-titlebox h4 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 19px;
+  text-transform: none;
+  text-align: left;
+}
+.faq__accordion-titlebox span {
+  transform: rotate(0);
+  transition: transform 0.5s ease-in-out;
+}
+.faq__accordion-titlebox.active span {
+  transform: rotate(45deg);
+}
+.faq__accordion-text {
+  padding: 0;
+  box-sizing: content-box;
+  font-weight: 200;
+  font-size: 16px;
+  line-height: 120%;
+  letter-spacing: 0.09em;
+  max-height: 0;
+  visibility: hidden;
+  transition: all 0.5s ease-in-out;
+}
+.faq__accordion-text.active {
+  visibility: visible;
+  padding-bottom: 25px;
 }
 /* planner */
 .planner {
@@ -631,8 +679,8 @@ h4 {
   appearance: none;
   display: inline-block;
   margin: 0;
-  width: 10px;
-  height: 10px;
+  width: 12px;
+  height: 12px;
   background-image: url(../img/svg/square_form_input.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -640,7 +688,7 @@ h4 {
   align-self: center;
 }
 .form-connect .form .approval__form .politics:checked {
-  background-image: url(../img/svg/arrow_form_list.svg), url(../img/svg/square_form_input.svg);
+  background: url(../img/svg/ckeck_mark.svg) bottom center no-repeat, url(../img/svg/square_form_input.svg) center no-repeat;
 }
 .form-connect .form .btn:disabled,
 .form-connect .form .btn {
