--- a/brand_teacher/less/style.less
+++ b/brand_teacher/less/style.less
@@ -121,12 +121,14 @@ ul, ol, p, figure, h1, h2, h3, h4 {
 
 /* intro */
 .intro {
-    display: flex;
-    height: 100vh;
-    position: fixed;
-    top: 0px;
-    z-index: -100;
     color: @text-light-color;
+    &__block {
+        display: flex;
+        height: 100vh;
+        position: fixed;
+        top: 0px;
+        z-index: -100;
+    }
     &__image {
         background-image: url(https://www.dummyimage.com/645x521/bfbfbf/fff.jpg);
         background-repeat: no-repeat;
@@ -148,6 +150,7 @@ ul, ol, p, figure, h1, h2, h3, h4 {
     }
     &__biography--text {
         margin-bottom: 5em;
+        text-align: justify;
     }
     &__arrow {
         justify-self: center;
@@ -234,6 +237,7 @@ ul, ol, p, figure, h1, h2, h3, h4 {
         transform: translateX(-35%) scaleX(0);
         opacity: 0;
         transition: all 0.5s ease-in-out;
+        z-index: 200;
     }
     #first_box_info.visible, #second_box_info.visible, #third_box_info.visible, #fourth_box_info.visible {
         transform: translateX(35%) scaleX(1);
@@ -242,6 +246,7 @@ ul, ol, p, figure, h1, h2, h3, h4 {
     #first_box_count, #second_box_count, #third_box_count, #fourth_box_count {
         opacity: 1;
         transition: all 0.5s ease-in-out;
+        z-index: 200;
     }
     #first_box_count.hidden, #second_box_count.hidden, #third_box_count.hidden, #fourth_box_count.hidden {
         opacity: 0;
@@ -254,6 +259,7 @@ ul, ol, p, figure, h1, h2, h3, h4 {
     overflow: hidden;
     background-color: @light-color;
     padding: 85px 0 35px;
+    color: @text-light-color;
     &--block {
         height: 430px;
     }
@@ -273,9 +279,6 @@ ul, ol, p, figure, h1, h2, h3, h4 {
         -webkit-border-radius: 25px;
         -moz-border-radius: 25px;
         border-radius: 25px;
-        & a {
-            color: @text-light-color;
-        }
     }
     .lorem_sq {
         width: 200px;
@@ -509,6 +512,104 @@ ul, ol, p, figure, h1, h2, h3, h4 {
 .reviews {
     background-color: @light-color;
     padding: 85px 0;
+    &__slider {
+        margin-top: 55px;
+        position: relative;
+        &--list {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+        }
+        &--item {
+            padding: 45px 65px;
+    
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+
+            position: relative;
+            z-index: 100;
+        }
+        &--img {
+            img {
+                border-radius: 50%;
+            }
+        }
+        &--people {
+            margin-top: 25px;
+            text-align: center;
+            font-weight: 400;
+            font-size: 16px;
+            letter-spacing: 0.03em;
+            p {
+                margin-bottom: 5px;
+            }
+            span {
+                font-weight: 300;
+                font-size: 14px;
+            }
+        }
+        &--block {
+            margin-top: 40px;
+            font-weight: 300;
+            p {
+                margin-bottom: 1.5em;
+                &:last-child {
+                    margin-bottom: 0;
+                }
+            }
+        }
+        .owl-stage-outer {
+            overflow: visible;
+        }
+        .owl-item {
+            background-color: @block-sq-color;
+            -webkit-border-radius: 25px;
+            -moz-border-radius: 25px;
+            border-radius: 25px;
+
+            box-shadow: 0 4px 20px 0 @shadow-color;
+
+            opacity: 0;
+
+            &.active {
+                opacity: 1;
+            }
+        }
+        &--arrow-box {
+            position: absolute;
+            z-index: 100;
+            top: 50%;
+            left: 0;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            .owl-prev, .owl-next {
+                background-color: transparent;
+            }
+            .owl-prev {
+                transform: rotate(180deg);
+            }
+        }
+        .owl-dots {
+            margin-top: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            button {
+                font-size: 0;
+                width: 10px;
+                height: 10px;
+                background-color: transparent;
+                border: 1px solid @lines-color;
+                border-radius: 50%;
+                margin: 0 10px;
+                &.active {
+                    background-color: @lines-color;
+                }
+            }
+        }
+    }
 }
 
 /* faq */
@@ -553,12 +654,12 @@ ul, ol, p, figure, h1, h2, h3, h4 {
             line-height: 120%;
             letter-spacing: 0.09em;
             max-height: 0;
-            // opacity: 0;
+            opacity: 0;
             visibility: hidden;
             transition: all 0.5s ease-in-out;
             &.active {
                 visibility: visible;
-                // opacity: 1;
+                opacity: 1;
                 padding-bottom: 25px;
             }
         }
@@ -619,7 +720,7 @@ ul, ol, p, figure, h1, h2, h3, h4 {
                 cursor: pointer;
                 z-index: 2;
                 user-select: none;
-                padding-bottom: 15px;
+                padding: 7.5px 0;
                 &.on {
                     display: block;
                 }
@@ -627,8 +728,7 @@ ul, ol, p, figure, h1, h2, h3, h4 {
             &__item {
                 span {
                     display: block;
-                    padding-top: 15px;
-                    padding-left: 15px;
+                    padding: 7.5px 15px;
                     &:hover {
                         background-color: @lines-color;
                     }
@@ -706,6 +806,7 @@ ul, ol, p, figure, h1, h2, h3, h4 {
             }
             a {
                 text-decoration: underline;
+                background-color: inherit;
             }
             label, a {
                 font-weight: 200;
@@ -735,7 +836,7 @@ ul, ol, p, figure, h1, h2, h3, h4 {
         }
     }
 
-    // animation
+    // animation background
     .circles{
         position: absolute;
         top: -30%;
@@ -752,72 +853,71 @@ ul, ol, p, figure, h1, h2, h3, h4 {
         height: auto;
         border-radius: 100%;
     }
-    
+
     .circles li:nth-child(1){
-        transform: translate3d(0, 0, 0);
+        transform: translate(0, -25%);
         animation: animate_first 5s ease-in-out infinite;
     }
     
-    
     .circles li:nth-child(2){
-        transform: translate3d(33%, 0, 10em) scale(0.5, 0.5);
+        transform: translate(33%, 0);
         animation: animate_second 5s ease-in-out infinite;
     }
     
     .circles li:nth-child(3){
-        transform: translate3d(66%, 0, 0);
+        transform: translate(66%, -25%);
         animation: animate_third 5s ease-in-out infinite;
     }
     
     @keyframes animate_first {
         0% {
-            transform: translate3d(0, 0, 0);
+            transform: translate(0, -25%);
         }
         25% {
-            transform: translate3d(66%, 0, 0);
+            transform: translate(66%, -25%);
         }
         50% {
-            transform: translate3d(33%, 0, 10em) scale(0.5, 0.5);
+            transform: translate(33%, 0);
         }
         75% {
-            transform: translate3d(66%, 0, 0);
+            transform: translate(66%, -25%);
         }
         100% {
-            transform: translate3d(0, 0, 0);
+            transform: translate(0, -25%);
         }
     }
     @keyframes animate_second {
         0% {
-            transform: translate3d(33%, 0, 10em) scale(0.5, 0.5);
+            transform: translate(33%, 0);
         }
         25% {
-            transform: translate3d(0, 0, 0);
+            transform: translate(0, -25%);
         }
         50% {
-            transform: translate3d(66%, 0, 0);
+            transform: translate(66%, -25%);
         }
         75% {
-            transform: translate3d(0, 0, 0)
+            transform: translate(0, -25%)
         }
         100% {
-            transform: translate3d(33%, 0, 10em) scale(0.5, 0.5);
+            transform: translate(33%, 0);
         }
     }
     @keyframes animate_third {
         0% {
-            transform: translate3d(66%, 0, 0);
+            transform: translate(66%, -25%);
         }
         25% {
-            transform: translate3d(33%, 0, 10em) scale(0.5, 0.5);
+            transform: translate(33%, 0);
         }
         50% {
-            transform: translate3d(0, 0, 0);
+            transform: translate(0, -25%);
         }
         75% {
-            transform: translate3d(33%, 0, 10em) scale(0.5, 0.5);
+            transform: translate(33%, 0);
         }
         100% {
-            transform: translate3d(66%, 0, 0);
+            transform: translate(66%, -25%);
         }
     }
 
